--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,11 @@
 @import url('./training.css');
+@import url('./btn.css');
+@import url('./footer.css');
 
 body {
   background-color: #C6C6C6;
+}
+
+.app__title-highlight {
+  color: white;
 }
