--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,16 +44,10 @@
 h1 {
     color: var(--title-color);
     font-size: 2.5rem;
-    margin-bottom: var(--margin-md);
+    margin-bottom: 0;
 }
 
 p {
     color: var(--text-color);
 }
 
-button {
-    background-color: var(--button-color);
-    padding: var(--padding-sm);
-    border-radius: var(--border-radius);
-    border: none;
-}
