almost finished styling of homepage, added routes for changing pages, setted up folderstructure for data

--- a/src/styles/training.css
+++ b/src/styles/training.css
@@ -36,5 +36,14 @@
         background-color: white;
         border-radius: 25px;
         padding: 0.3rem;
+        margin-bottom: 0.5rem;
     }
+}
+
+.training__info, .training__title{
+    margin: 0;
+}
+
+.training__card-link {
+    text-decoration: none;
 }
