--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,12 +1,16 @@
 .footer {
-    height: 4.5rem;
-    border-radius: 10px 10px 0 0;
-    background-color: var(--title-color);
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+  height: 4.5rem;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: var(--title-color);
+
+  /* de ronde vorm */
+  border-top-left-radius: 20% 45px;
+  border-top-right-radius: 20% 45px;
 }
