--- a/src/styles/training.css
+++ b/src/styles/training.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-bottom: 6rem;
 }
 
 .training {
@@ -46,4 +47,19 @@
 
 .training__card-link {
     text-decoration: none;
+}
+
+.training__options-menu {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.5rem;
+}
+
+.training__option-edit, .training__option-delete {
+    width: 48%;
+    padding: 0.5rem;
+    border-radius: 25px;
+    color: white;
+    border: none;
+    cursor: pointer;
 }
