--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,8 @@
 @import url('./btn.css');
 @import url('./footer.css');
 @import url('./form.css');
+@import url('./table.css');
+@import url('./workout.css');
 
 body {
   background-color: #C6C6C6;
